--- a/src/metadb/Chemoinformatics/Chemoinformatics.vbproj
+++ b/src/metadb/Chemoinformatics/Chemoinformatics.vbproj
@@ -174,6 +174,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Formula\AbbrevStatsType.vb" />
+    <Compile Include="Formula\SearchOption.vb" />
+    <Compile Include="Formula\FormulaSearch.vb" />
+    <Compile Include="Formula\ElementSearchRange.vb" />
     <Compile Include="Formula\FormulaComposition.vb" />
     <Compile Include="Formula\FormulaScanner.vb" />
     <Compile Include="Formula\Element.vb" />
