--- a/src/metadb/Chemoinformatics/Chemoinformatics.vbproj
+++ b/src/metadb/Chemoinformatics/Chemoinformatics.vbproj
@@ -174,6 +174,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Formula\AbbrevStatsType.vb" />
+    <Compile Include="Formula\FormalCharge.vb" />
     <Compile Include="Formula\SearchOption.vb" />
     <Compile Include="Formula\FormulaSearch.vb" />
     <Compile Include="Formula\ElementSearchCandiate.vb" />
