--- a/src/metadb/FormulaSearch.Extensions/FormulaSearch.Extensions.vbproj
+++ b/src/metadb/FormulaSearch.Extensions/FormulaSearch.Extensions.vbproj
@@ -87,6 +87,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PrecursorIonComposition.vb" />
     <Compile Include="PrecursorIonSearch.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
