--- a/src/mzkit/mzkit/mzkit.vbproj
+++ b/src/mzkit/mzkit/mzkit.vbproj
@@ -128,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
+    <Compile Include="settings\UISettings.vb" />
     <Compile Include="settings\PrecursorSearchSettings.vb" />
     <Compile Include="settings\Settings.vb" />
     <Compile Include="DataControlHandler.vb" />
