--- a/src/mzkit/mzkit/mzkit.vbproj
+++ b/src/mzkit/mzkit/mzkit.vbproj
@@ -147,6 +147,12 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="pages\Settings\ISaveSettings.vb" />
+    <Compile Include="pages\PageScripting.Designer.vb">
+      <DependentUpon>PageScripting.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\PageScripting.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="settings\UISettings.vb" />
     <Compile Include="settings\PrecursorSearchSettings.vb" />
     <Compile Include="settings\Settings.vb" />
@@ -240,6 +246,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pages\PageMzSearch.resx">
       <DependentUpon>PageMzSearch.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\PageScripting.resx">
+      <DependentUpon>PageScripting.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\PageSettings.resx">
       <DependentUpon>PageSettings.vb</DependentUpon>
