--- a/src/mzkit/mzkit/mzkit.vbproj
+++ b/src/mzkit/mzkit/mzkit.vbproj
@@ -110,6 +110,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Windows.Forms.TabControl">
+      <HintPath>..\dist\System.Windows.Forms.TabControl.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms.ThemeColorPicker">
       <HintPath>..\dist\System.Windows.Forms.ThemeColorPicker.dll</HintPath>
     </Reference>
