--- a/src/mzkit/mzkit/mzkit.vbproj
+++ b/src/mzkit/mzkit/mzkit.vbproj
@@ -173,6 +173,12 @@
     <Compile Include="pages\dockWindow\ToolWindow.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="pages\pageStart\NewsFeedDisplay.Designer.vb">
+      <DependentUpon>NewsFeedDisplay.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\pageStart\NewsFeedDisplay.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="pages\Settings\AppConfig.Designer.vb">
       <DependentUpon>AppConfig.vb</DependentUpon>
     </Compile>
@@ -192,10 +198,10 @@
     <Compile Include="pages\Settings\RawFileViewer.vb">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="pages\PageStart.Designer.vb">
+    <Compile Include="pages\pageStart\PageStart.Designer.vb">
       <DependentUpon>PageStart.vb</DependentUpon>
     </Compile>
-    <Compile Include="pages\PageStart.vb">
+    <Compile Include="pages\pageStart\PageStart.vb">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="settings\UISettings.vb" />
@@ -333,7 +339,10 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
-    <EmbeddedResource Include="pages\PageStart.resx">
+    <EmbeddedResource Include="pages\pageStart\NewsFeedDisplay.resx">
+      <DependentUpon>NewsFeedDisplay.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\pageStart\PageStart.resx">
       <DependentUpon>PageStart.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\Settings\AppConfig.resx">
