--- a/src/mzkit/mzkit/mzkit.vbproj
+++ b/src/mzkit/mzkit/mzkit.vbproj
@@ -154,6 +154,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="pages\dockWindow\DummyPropertyWindow.Designer.vb" />
+    <Compile Include="pages\dockWindow\frmStartPage.Designer.vb">
+      <DependentUpon>frmStartPage.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\frmStartPage.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="pages\dockWindow\frmDockDocument.Designer.vb">
       <DependentUpon>frmDockDocument.vb</DependentUpon>
     </Compile>
@@ -298,6 +304,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\frmSearchList.resx">
       <DependentUpon>frmSearchList.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\dockWindow\frmStartPage.resx">
+      <DependentUpon>frmStartPage.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\ToolWindow.resx" />
     <EmbeddedResource Include="pages\PageMoleculeNetworking.resx">
