--- a/src/mzkit/mzkit/mzkit.vbproj
+++ b/src/mzkit/mzkit/mzkit.vbproj
@@ -154,6 +154,10 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="pages\dockWindow\DummyPropertyWindow.Designer.vb" />
+    <Compile Include="pages\dockWindow\frmSettings.Designer.vb">
+      <DependentUpon>frmSettings.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\frmSettings.vb" />
     <Compile Include="pages\dockWindow\frmStartPage.Designer.vb">
       <DependentUpon>frmStartPage.vb</DependentUpon>
     </Compile>
