how to config plots?

--- a/src/mzkit/mzkit/mzkit.vbproj
+++ b/src/mzkit/mzkit/mzkit.vbproj
@@ -255,6 +255,12 @@
     <Compile Include="pages\PageRscriptEditor.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="pages\Settings\PlotConfig.Designer.vb">
+      <DependentUpon>PlotConfig.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\Settings\PlotConfig.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="settings\UISettings.vb" />
     <Compile Include="settings\PrecursorSearchSettings.vb" />
     <Compile Include="settings\Settings.vb" />
@@ -410,6 +416,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pages\Settings\ElementProfile.resx">
       <DependentUpon>ElementProfile.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\Settings\PlotConfig.resx">
+      <DependentUpon>PlotConfig.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\Settings\RawFileViewer.resx">
       <DependentUpon>RawFileViewer.vb</DependentUpon>
