add test of the mzkit workbench R api

--- a/src/mzkit/mzkit/mzkit.vbproj
+++ b/src/mzkit/mzkit/mzkit.vbproj
@@ -357,6 +357,9 @@
     <EmbeddedResource Include="pages\dockWindow\explorer\frmFileTree.resx">
       <DependentUpon>frmFileTree.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="pages\dockWindow\frmRsharp.resx">
+      <DependentUpon>frmRsharp.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\frmSearchList.resx">
       <DependentUpon>frmSearchList.vb</DependentUpon>
     </EmbeddedResource>
