tooltip is not working?

--- a/src/mzkit/mzkit/mzkit.vbproj
+++ b/src/mzkit/mzkit/mzkit.vbproj
@@ -162,6 +162,9 @@
     <Compile Include="forms\frmLicense.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="pages\PlotTooltip.vb">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="pages\CollDatagridview.vb" />
     <Compile Include="pages\contextMenu\ExportData.vb">
       <SubType>Component</SubType>
