--- a/src/mzkit/mzkit/mzkit.vbproj
+++ b/src/mzkit/mzkit/mzkit.vbproj
@@ -199,6 +199,7 @@
     <Compile Include="forms\frmLicense.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="forms\ISplashScreenUpdater.vb" />
     <Compile Include="pages\dockWindow\frmPlotViewer.Designer.vb">
       <DependentUpon>frmPlotViewer.vb</DependentUpon>
     </Compile>
